fixed proj page images overflowing bounds

--- a/src/app/projectcard/projectcard.component.css
+++ b/src/app/projectcard/projectcard.component.css
@@ -9,6 +9,7 @@
 
 img {
     width: 300px;
+    max-width: 100%;
     margin: 15px 15px 15px 15px;
     flex-shrink: 0;
 }
